# rag-factory

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  rf
benchmark/: CONFIG_GUIDE.md  FINDINGS.md  README.md  analyze.py  bench.py  bench_streaming.py  phase14_corpus_validation.md  queries-rfp-archive.json  queries.json
benchmark/results/: post_refactor_smoke.json  simple_vs_agent_AGENT.json  simple_vs_agent_SIMPLE.json  streaming_verifier_off.json  streaming_verifier_on.json  t70_9b_e2b.json  t70_e4b_9b.json  t70_gemma3_12b_qwen9b.json  t70_reset_iter2.json  t75_9b.json  t_4b_uniform.json  t_9b_uniform.json  t_hybrid.json
docs/: AGENT_ARCHITECTURE.md  AGENT_ROADMAP.md  architecture.html  architecture.md  cli-reference.html  cli-reference.md  configuration.html  configuration.md  development.html  development.md  guide.html  guide.md  integration-guide.html  integration-guide.md  quick-reference.html  quick-reference.md
scripts/: build_allganize_eval.py  build_allganize_full_benchmark.py  eval_allganize_agent_rag.py  eval_allganize_queries.json  eval_allganize_queries_full.json  eval_retrieval_pipeline.py  fetch_allganize_pdfs.py  judge_eval_answers.py  reclassify_eval.py
src/rag_factory/: cli.py  config.py
src/rag_factory/rag/: corpus_profile.py  search.py  server.py
src/rag_factory/rag/agent/: answer_verifier.py  citation_audit.py  intent_classifier.py  orchestrator.py  prompts.py  tools.py  verifier.py
src/rag_factory/rag/static/: chat.html
src/slm_factory/: cli.py  config.py  pipeline.py
src/slm_factory/exporter/: autorag_export.py  corpus_export.py
src/slm_factory/rag/: corpus_profile.py  server.py
src/slm_factory/rag/agent/: intent_classifier.py  orchestrator.py  prompts.py  quality_loop.py  reflector.py  tools.py  web_search.py
templates/: project.yaml
tests/: test_agent_answer_verifier.py  test_agent_citation_audit.py  test_agent_custom_personas.py  test_agent_hooks.py  test_agent_memory.py  test_agent_model_routing.py  test_agent_orchestrator.py  test_agent_orchestrator_smart.py  test_agent_persona_composite.py  test_agent_skills.py  test_agent_smart_mode.py  test_agent_verifier.py  test_autorag_export.py  test_contextual_retriever.py  test_corpus_profile.py  test_integration.py  test_intent_classifier.py  test_pipeline.py  test_ralph_loop.py  test_search_rerank.py  test_web_search.py
(+2 files in other folders)
