[project]
name = "rag-factory"
version = "0.1.0"
description = "Teacher-Student Knowledge Distillation framework for building domain-specific SLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "typer>=0.25.0",
    "pydantic>=2.13.0",
    "pyyaml>=6.0.3",
    "rich>=15.0",
    "httpx>=0.28.1",
    "charset-normalizer>=3.4.7",
    # Parsing
    "pymupdf>=1.27.2",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.1.0",
    # ML (training)
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "datasets>=4.8.0",
    "peft>=0.19.0",
    "trl>=1.4.0",
    "accelerate>=1.13.0",
]

[project.optional-dependencies]
cuda = [
    "bitsandbytes>=0.49.2",
]
korean = [
    "kiwipiepy>=0.23.0",
]
validation = [
    "sentence-transformers>=5.4.0",
]
hwp = [
    "olefile>=0.47",
]
ocr = [
    "pymupdf4llm>=1.27.0",
]
docx = [
    "python-docx>=1.2.0",
]
pptx = [
    "python-pptx>=1.0.2",
]
xlsx = [
    "openpyxl>=3.1.5",
]
xls = [
    "xlrd>=2.0.2",
]
rag = [
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.4.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.46.0",
    "rank_bm25>=0.2.2",
]
eval = [
    "evaluate>=0.4.6",
    "rouge-score>=0.1.2",
    "nltk>=3.9.0",
]
tui = [
    "textual>=8.2.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.3.0",
]
all = [
    "bitsandbytes>=0.49.2; sys_platform != 'darwin'",
    "kiwipiepy>=0.23.0",
    "sentence-transformers>=5.4.0",
    "olefile>=0.47",
    "pymupdf4llm>=1.27.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "evaluate>=0.4.6",
    "rouge-score>=0.1.2",
    "nltk>=3.9.0",
    "textual>=8.2.0",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "pytest-asyncio>=1.3.0",
    "qdrant-client>=1.17.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.46.0",
    "rank_bm25>=0.2.2",
]

[project.scripts]
rag-factory = "rag_factory.cli:app"

[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]

[tool.setuptools.packages.find]
where = ["src"]
